--- a/index.html
+++ b/index.html
@@ -484,6 +484,77 @@
 		</section><!--/.experience-->
 		<!--experience end -->
 
+		<!--portfolio start -->
+		<section id="portfolio" class="portfolio">
+			<div class="portfolio-details">
+				<div class="section-heading text-center">
+					<h2>Certifications</h2>
+				</div>
+				<div class="container">
+					<div class="portfolio-content">
+						<div class="isotope">
+							<div class="row">
+
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/java.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Java Certification<br>
+												NIIT
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+									<div class="item">
+										<img src="assets/images/android.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Android Certification<br>
+												NIIT
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+
+								<div class="col-sm-4">
+									<div class="item">
+										<!-- <img src="assets/images/react.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												web design
+											</a> -->
+										<!-- </div>/.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/python.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Python Developer Certification<br>
+												RCPL
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+									<div class="item">
+										<img src="assets/images/django.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Django Rest FrameWork Certification<br>
+												Udemy
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+							</div><!-- /.row -->
+						</div><!--/.isotope-->
+					</div><!--/.gallery-content-->
+				</div><!--/.container-->
+			</div><!--/.portfolio-details-->
+
+		</section><!--/.portfolio-->
+		<!--portfolio end -->
 
 		<!--contact start -->
 		<section id="contact" class="contact">
