--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
+								<li class="smooth-menu"><a href="#certifications">certifications</a></li>
 			                   	<li class="smooth-menu"><a href="#contact">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
@@ -485,7 +486,7 @@
 		<!--experience end -->
 
 		<!--portfolio start -->
-		<section id="portfolio" class="portfolio">
+		<section id="certifications" class="portfolio">
 			<div class="portfolio-details">
 				<div class="section-heading text-center">
 					<h2>Certifications</h2>
